[metadata]
name = tomorrow_io
author = TheToddLuci0
version = 0.0.0
description = Wrapper layer for https://tomorrow.io
url = #TODO
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src